# hmdq

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Changelog.md  LICENSE  README.md  clang-reformat.ps1  conanfile.txt
cmake/: build.cmake  gitversion.cmake  utils.cmake
conan/: conan.profile.txt  conan_install.cmd  conan_install_all.cmd
conan/profiles/: build_msvc_v193_crtdll.txt
conan/scripts/: conan_build_and_cache_bin_packages.cmd  conan_build_and_cache_bin_shared_packages.cmd  conan_build_and_cache_source_only_package.cmd
hmdq/: BaseVR.h  CMakeLists.txt  OpenVRCollector.cpp  OpenVRCollector.h  OpenVRProcessor.cpp  OpenVRProcessor.h  base_classes.h  base_common.cpp  base_common.h  basecomp.h  calcview.cpp  calcview.h  compat.h  config.cpp  config.h  except.h  fifo_map_fix.h  fmthlp.h  geom.cpp  geom.h  geom2.cpp  geom2.h  hmddef.cpp  hmddef.h  hmdq.cpp  hmdview.cpp  hmdview.h  jkeys.cpp  jkeys.h  json_proxy.h  jtools.cpp  jtools.h  oculus_collector.cpp  oculus_collector.h  oculus_common.cpp  oculus_common.h  oculus_config.cpp  oculus_config.h  oculus_processor.cpp  oculus_processor.h  (+26 more)
hmdq/res/: gitversion.h.in  hmdq.rc.in  misc.h.in
hmdq_test/: CMakeLists.txt  geom_test.cpp  optmesh_test.cpp  verhlp_test.cpp
hmdv/: CMakeLists.txt  hmdfix.cpp  hmdfix.h  hmdv.cpp  verhlp.cpp  verhlp.h
hmdv/res/: hmdv.rc.in  misc.h.in
python/: hmdv_batch.py
res/: gitversion.h.in  misc.h.in  save_data.cmd
src/: CMakeLists.txt
src/common/: CMakeLists.txt  base_classes.h  base_common.cpp  base_common.h  calcview.cpp  calcview.h  config.cpp  config.h  except.h  fmthlp.h  geom.cpp  geom.h  geom2.cpp  geom2.h  jkeys.cpp  jtools.cpp  jtools.h  oculus_common.cpp  oculus_common.h  oculus_config.cpp  oculus_config.h  oculus_processor.cpp  oculus_processor.h  oculus_props.h  openvr_common.cpp  openvr_common.h  openvr_config.cpp  openvr_config.h  openvr_processor.cpp  openvr_processor.h  optmesh.cpp  optmesh.h  prtdata.cpp  prtdata.h  prtdef.h  prtstl.h  verhlp.cpp  verhlp.h  wintools.cpp  xtdef.cpp  (+1 more)
src/hmdq/: CMakeLists.txt  hmdq.cpp  oculus_collector.cpp  oculus_collector.h  openvr_collector.cpp  openvr_collector.h
src/hmdq/res/: hmdq.rc.in  hmdq_misc.h.in
src/hmdq_test/: CMakeLists.txt  geom_test.cpp  geos_test.cpp  optmesh_test.cpp  verhlp_test.cpp
src/hmdv/: CMakeLists.txt  hmdfix.cpp  hmdfix.h  hmdv.cpp
src/hmdv/res/: hmdv.rc.in  hmdv_misc.h.in
